Add fight animations to the extracted assets. Improve fighting and add monitoring. Polish.